some group users chantges
